restructuring project for webpack, started implementing chatGPT

--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html>
   <head>
     <title>Chess</title>
-    <link rel="stylesheet" href="css/chessboard-1.0.0.min.css">
-    <link rel="icon" type="image/x-icon" href="/img/horse.ico">
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="js/chessboard-1.0.0.min.js"></script>
+    <!-- <link rel="stylesheet" href="../css/chessboard-1.0.0.min.css"> -->
+    <!-- <link rel="icon" type="image/x-icon" href="src/img/horse.ico"> -->
+    <!-- <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="src/js/chessboard-1.0.0.min.js"></script> -->
   </head>
   <body>
     <style>
       #game {
         /* position: absolute; */
         /* left: 35%; */
-        width: 40%;
-        /* height: 50%; */
+        width: 35%;
         display: block;
         /* justify-content: center;
         align-items: center;
@@ -25,6 +24,7 @@
         /* position: absolute; */
         /* left: 35%; */
         width: 100%;
+        /* height: 70%; */
         min-width: 300pt;
         display: inline-block;
         text-align: center;
@@ -45,12 +45,12 @@
         <label>PGN:</label>
         <div id="pgn"></div>
 
-        <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js" integrity="sha384-s3XgLpvmHyscVpijnseAmye819Ee3yaGa8NxstkJVyA6nuDFjt59u1QvuEl/mecz" crossorigin="anonymous"></script>
+        <!-- <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js" integrity="sha384-s3XgLpvmHyscVpijnseAmye819Ee3yaGa8NxstkJVyA6nuDFjt59u1QvuEl/mecz" crossorigin="anonymous"></script> -->
         <button id="resetBtn">Reset</button>
         <!-- <button id="clearBtn">Clear</button> -->
 
-        <script src="src/game.js"></script>
+        <!-- <script type="module" src="src/bundle.js"></script> -->
       </div>
     </div>
     
