working version 2, added stalemate checking

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </div>
         <div class = "game">
           <div class = "brown neo cg-wrap" id="chessground"></div>
+          <div class="result" id="result_text"></div>
         </div>
         <div class="difficulty">
           <p id="diff_label">Difficulty: Easy</p>
