fixed king detection issue, not sure if solution to failed fetch request works

--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
           <span class="logo">Chess</span><span class="logo">GPT</span>
         </h1>
         <p class="text header">Can you beat ChatGPT-3.5 at chess?</p>
-        <p class="text instructions">Once you click start, you will be randomly assigned as White or Black. You must stick to the standard rules of chess, but ChatGPT does not.<br><br>You win if you checkmate ChatGPT or if ChatGPT changes how many Kings it has.<br></p>
+        <ol class="text instructions">
+          <li>Choose your difficulty (only works when not in a game).</li>
+          <li>Click "Play" to start a new game and to be randomly assigned a side.</li>
+          <li>Standard rules of chess apply to you, but maybe not to ChatGPT.</li>
+          <li>Both sides win either by checkmate or if the opponent has an incorrect number of Kings.</li>
+          <li>ChatGPT's responses will be displayed at the top. ChatGPT loves telling people it won when it hasn't.</li>
+          <li>If ChatGPT's response is not a formatted move, you get to move again.</li>
+        </ol>
+        <!-- <p class="text instructions">Once you click start, you will be randomly assigned as White or Black. You must stick to the standard rules of chess, but ChatGPT does not.<br><br>You win if you checkmate ChatGPT or if ChatGPT changes how many Kings it has.<br></p> -->
         <button id="exitBtn">Good Luck!</button>
         <p class="text credits">Made by Victor Chen, see <a href="https://github.com/vc64/ChessGPT" target="_blank">repo</a> for credits</p>
       </div>
