altered difficulty modes; normal (standard mode) and volatile (limited memory and has insults\)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="result" id="result_text"></div>
         </div>
         <div class="difficulty">
-          <p id="diff_label">Difficulty: Easy</p>
+          <p id="diff_label">Difficulty: Normal</p>
           <div class="buttons">
             <button class="diffBtn" id="hardBtn">Switch Difficulty</button>
             <button id="resetBtn">Play</button>
